--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+    <meta name="build.version" content="<%= htmlWebpackPlugin.options.build.version %>">
+    <meta name="build.number" content="<%= htmlWebpackPlugin.options.build.number %>">
     <style>
         .has-js .no-js {
             visibility: hidden;
