Form header errors

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,6 +9,7 @@
     <style>
         .has-js .no-js {
             visibility: hidden;
+            position: absolute;
         }
     </style>
     <script type="application/javascript">
